--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,129 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  box-sizing: border-box;
+  font: inherit;
+  max-width: 100%;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-family: 'Raleway', sans-serif;
+  font-size: 62.5%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 1.5rem;
+  border: solid 2px black;
+  align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav h1 {
+  font-size: 1.3rem;
+  color: red;
+  text-transform: uppercase;
+}
+
+.navButtons a {
+  padding: 0.6rem 2rem;
+  background-color: black;
+  color: white;
+  text-decoration: none;
+  border: 2px solid black;
+}
+
+#help {
+  background-color: white;
+  color: black;
+}
+
+.header-bg {
+  background-image: url(./Assets/sk-CK6tjAIMJWM-unsplash.jpg);
+  background-size: 1600px 800px;
+  height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.header-bg h2 {
+  font-size: 3rem;
+  color: white;
+  text-shadow: 2px 2px black;
+  padding: 1rem;
+}
+
+#pizza {
+  padding: 0.8rem 2.5rem;
+  background-color: white;
+  font-size: 1rem;
+  letter-spacing: 1px;
+  border: solid black 2px;
+  text-decoration: none;
+  font-weight: bold;
+  color: black;
+}
+
+.pizzaForm {
+  width: 800px;
+  margin: 1% auto;
+  border: black solid 2px;
+}
+
+.pizzaForm h2 {
+  font-size: 1.7rem;
+  padding: 1rem;
+}
+
+.form-pic {
+  background-image: url(./Assets/Pizza.jpg);
+  background-size: 800px;
+  height: 35vh;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+}
+
+.pizzaForm {
+  font-size: 0.8rem;
+}
+
+.pizzaForm div {
+  padding: 0.8%;
+}
+
+form {
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+
+.toppings {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.toppings-column {
+  display: flex;
+  flex-direction: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  width: 100%;
+  padding: 1%;
+  background-color: red;
+  border: 1px solid black;
+  margin: 1% 0;
+  font-size: 1rem;
+  cursor: pointer;
+  color: black;
+}
+
+.pizzaResults {
+  padding: 1%;
+  font-size: 1rem;
 }
