--- a/src/App.css
+++ b/src/App.css
@@ -93,6 +93,11 @@ nav h1 {
   font-size: 0.8rem;
 }
 
+.pizzaForm h3 {
+  font-size: 1.2rem;
+  padding: 1%;
+}
+
 .pizzaForm div {
   padding: 0.8%;
 }
@@ -126,4 +131,20 @@ button {
 .pizzaResults {
   padding: 1%;
   font-size: 1rem;
+  border: 2px solid black;
+  width: 800px;
+  margin: 0 auto;
+}
+
+.pizzaResults h2 {
+  font-size: 1.2rem;
+  padding: 0.8%;
+}
+
+.pizzaResults h3 {
+  padding: 0.8%;
+}
+
+.pizzaResults ul li {
+  list-style: none;
 }
